fix tab drag and drop collapsing tabbar height, issue #8

--- a/ui/hide-single-tab.css
+++ b/ui/hide-single-tab.css
@@ -4,9 +4,3 @@
 #TabsToolbar .private-browsing-indicator {
 	display: none !important;
 }
-
-#tabbrowser-tabs,
-#tabbrowser-tabs arrowscrollbox {
-	height: initial !important;
-	min-height: initial !important;
-}
